<resources>
    <string name="app_name" translatable="false">LocaleHelper</string>

    <string name="main_activity_title">[EN] This title is in English</string>
    <string name="main_activity_desc">This is the description text in English.</string>
    <string name="main_activity_about">This is about text in English.</string>
    <string name="main_activity_to_tr_button">Turkish</string>
    <string name="main_activity_to_en_button">English</string>
    <string name="main_activity_toolbar_title">Title in English</string>
    <string name="main_activity_to_it_button">Italian</string>
    <string name="main_activity_to_fr_button">French</string>
    <string name="main_activity_to_ar_button">Arabic</string>
</resources>